--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Chat.js Demo</title>
-    <script src="js/jquery-2.0.3.min.js"></script>
-    <script src="js/strophe.js"></script>
-    <script src="chat.js"></script>
+    <!--<script src="js/jquery-2.0.3.min.js"></script>-->
+    <!--<script src="js/strophe.js"></script>-->
+    <!--<script src="chat.js"></script>-->
+    <script data-main="main" src="js/require.js"></script>
 </head>
 <script>
 
