fixing up index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 </script>
 <body>
+    <div style="text-align: center;">
+        <h1>Chat.js</h1>
+        <h3>By Ramon Rovirsa</h3>
+        <a href="https://github.com/ramonrovirosa/Strophe_Wrapper_Library">Strophe_Wrapper_Library</a>
+    </div>
 
 </body>
 </html>
